--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Gradio==3.1.4  
-numpy==1.23.5  
-pandas==1.5.3  
-torch==1.12.1  
-transformers==4.21.1  
+gradio
+requests
+huggingface_hub
+python-dotenv
