--- a/secret.yaml
+++ b/secret.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: ai-chatbot
+---
+apiVersion: v1
 kind: Secret
 metadata:
   name: ai-chatbot-secret
