--- a/manifest.yaml
+++ b/manifest.yaml
@@ -55,7 +55,8 @@ metadata:
   namespace: ai-chatbot
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   defaultBackend:
     service:
@@ -66,7 +67,7 @@ spec:
   - host: ai.server05.my.id
     http:
       paths:
-      - path: /*
+      - path: /(.*)
         pathType: Prefix
         backend:
           service:
