--- a/manifest.yaml
+++ b/manifest.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ai-chatbot
+  name: ai-chatbot-deployment
   namespace: ai-chatbot
 spec:
   replicas: 1
@@ -46,7 +46,6 @@ spec:
       targetPort: 7860
   type: ClusterIP
 
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -58,16 +57,11 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  defaultBackend:
-    service:
-      name: ai-chatbot-service
-      port:
-        number: 80
   rules:
   - host: ai.server05.my.id
     http:
       paths:
-      - path: /(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
