--- a/manifest.yaml
+++ b/manifest.yaml
@@ -44,7 +44,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 7860
-  type: ClusterIP
+  type: LoadBalancer
 
 ---
 apiVersion: networking.k8s.io/v1
