--- a/manifest.yaml
+++ b/manifest.yaml
@@ -47,24 +47,19 @@ spec:
   type: LoadBalancer
 
 ---
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ai-chatbot-ingress
   namespace: ai-chatbot
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+  labels:
+    app: ai-chatbot
 spec:
   rules:
   - host: ai.server05.my.id
     http:
       paths:
       - path: /
-        pathType: Prefix
         backend:
-          service:
-            name: ai-chatbot-service
-            port:
-              number: 80
+          serviceName: ai-chatbot-service
+          servicePort: 80
