--- a/manifest.yaml
+++ b/manifest.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ai-chatbot-deployment
+  name: ai-chatbot
   namespace: ai-chatbot
 spec:
   replicas: 1
@@ -45,7 +45,19 @@ spec:
       port: 80
       targetPort: 7860
   type: LoadBalancer
-
+---
+kind: Service
+metadata:
+  name: ai-chatbot-service2
+  namespace: ai-chatbot
+spec:
+  selector:
+    app: ai-chatbot
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 7860
+  type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -53,21 +65,16 @@ metadata:
   name: ai-chatbot-ingress
   namespace: ai-chatbot
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
-  defaultBackend:
-    service:
-      name: ai-chatbot-service
-      port:
-        number: 80
   rules:
   - host: ai.server05.my.id
     http:
       paths:
-      - path: /*
+      - path: /?(.*)
         pathType: Prefix
         backend:
           service:
-            name: ai-chatbot-service
+            name: ai-chatbot-service2
             port:
               number: 80
