--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,9 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: ai-chatbot
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -46,6 +40,7 @@ spec:
       targetPort: 7860
   type: LoadBalancer
 ---
+apiVerson: v1
 kind: Service
 metadata:
   name: ai-chatbot-service2
@@ -55,7 +50,7 @@ spec:
     app: ai-chatbot
   ports:
     - protocol: TCP
-      port: 80
+      port: 81
       targetPort: 7860
   type: ClusterIP
 ---
@@ -77,4 +72,4 @@ spec:
           service:
             name: ai-chatbot-service2
             port:
-              number: 80
+              number: 81
