--- a/manifest.yaml
+++ b/manifest.yaml
@@ -40,7 +40,7 @@ spec:
       targetPort: 7860
   type: LoadBalancer
 ---
-apiVerson: v1
+apiVersion: v1
 kind: Service
 metadata:
   name: ai-chatbot-service2
@@ -63,13 +63,13 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-  - host: ai.server05.my.id
-    http:
-      paths:
-      - path: /?(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: ai-chatbot-service2
-            port:
-              number: 81
+    - host: ai.server05.my.id
+      http:
+        paths:
+          - path: /?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: ai-chatbot-service2
+                port:
+                  number: 81
